--- a/css/query.css
+++ b/css/query.css
@@ -8,6 +8,9 @@
     #pantallaTres {
         left: 63em;
     }
+    .texto-p {
+        top: 1em;
+    }
 }
 
 @media screen and (min-width:200px) and (max-width:1414px) {
